--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "express": "^4.16.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.20.1",
     "react": "^16.2.0",
