--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "forever server",
-    "start:dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
